Changed link to the video tab and video icon; fixed bottom bar scaling problem; give a distance between the slider and the home video when these two are wrapped.

--- a/css/bottombar.css
+++ b/css/bottombar.css
@@ -23,6 +23,7 @@ This page contains the styling for the bottom bar of the webpage.
 
 .bottom-link {
     width: auto;
+    border: 5px solid blue;
 }
 
 .bottom-link a{
@@ -32,6 +33,9 @@ This page contains the styling for the bottom bar of the webpage.
 
 .social-media-icons {
     display: flex;
+    justify-content: space-around;
+    border: 5px solid yellow;
+    width: 7.5em;
 }
 
 #facebook, #youtube {
